Dockerized, removed hardcoded values